--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,7 @@
 This is the finance  tracker app.
+*Lecture 156 and 157 for starting an app*
+
+Adding Devise:
+Gemfile:    gem 'devise'
+CMD line:   rails generate devise:install
+            rails generate devise User
