--- a/README.rdoc
+++ b/README.rdoc
@@ -3,5 +3,27 @@ This is the finance  tracker app.
 
 Adding Devise:
 Gemfile:    gem 'devise'
+            
 CMD line:   rails generate devise:install
             rails generate devise User
+            
+            
+In app controller
+    before_action :authenticate_user!
+    
+    
+    gem 'twitter-bootstrap-rails'
+    bundle install --without production
+    rails generate bootstrap:install static
+    rails generate bootstrap:layout application
+    Y
+    
+    gem 'devise-bootstrap-views'
+    bundle install --without production
+  in application.css:
+     *= require devise_bootstrap_views
+     rails generate devise:views:locale en
+     rails generate devise:views:bootstrap_templates
+     
+     
+     rails generate model Stock ticker:string name:string last_price:decimal
